--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.144.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/three": "^0.143.2",
     "@types/webmidi": "^2.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "typescript": "^4.6.4",
